--- a/prj_links/links.htm
+++ b/prj_links/links.htm
@@ -1,22 +1,26 @@
 <!DOCTYPE html><html lang="en"><head></head><body id="links">
 
 <h2>Search</h2>
-    <a href="https://duckduckgo.com/?q=&t=ffsb" target="_blank">duckduckgo</a>
-    <a href="https://www.google.com/" target="_blank">google</a>
-    <a href="https://yandex.ru/" target="_blank">yandex</a>
-    <a href="http://vkdoc.tk/?q=%22%D0%B6%D0%B8%D0%B6%D0%B5%D0%BA%22&ext=pdf,djvu,-doc" target="_blank">Vk.com document search</a>
-    <a href="" target="_blank"></a>
-    <a href="" target="_blank"></a>
-    <a href="" target="_blank"></a>
-    <a href="" target="_blank"></a>
-    <a href="" target="_blank"></a>
-    <a href="" target="_blank"></a>
-    <a href="" target="_blank"></a>
+    <div class="t_grid">
+        <a class="btn_lnk" href="https://duckduckgo.com/?q=&t=ffsb" target="_blank">duckduckgo</a>
+        <a class="btn_lnk" href="https://www.google.com/" target="_blank">google</a>
+        <a class="btn_lnk" href="https://yandex.ru/" target="_blank">yandex</a>
+        <a class="btn_lnk" href="http://vkdoc.tk/?q=%22%D0%B6%D0%B8%D0%B6%D0%B5%D0%BA%22&ext=pdf,djvu,-doc" target="_blank">Vk.com document search</a>
+        <a class="btn_lnk" href="" target="_blank"></a>
+        <a class="btn_lnk" href="" target="_blank"></a>
+        <a class="btn_lnk" href="" target="_blank"></a>
+        <a class="btn_lnk" href="" target="_blank"></a>
+        <a class="btn_lnk" href="" target="_blank"></a>
+        <a class="btn_lnk" href="" target="_blank"></a>
+        <a class="btn_lnk" href="" target="_blank"></a>
+    </div>
 
 <h2>Code examples web</h2>
-    <a href="hf-mv.com" target="_blank">head first mobile web</a>
-    <a href="https://resources.oreilly.com/examples/9780596101978/tree/master" target="_blank">head first</a>
-    <a href="https://resources.oreilly.com/examples" target="_blank">head first</a>
+    <div class="t_grid">
+        <a class="btn_lnk" href="hf-mv.com" target="_blank">head first mobile web</a>
+        <a class="btn_lnk" href="https://resources.oreilly.com/examples/9780596101978/tree/master" target="_blank">head first</a>
+        <a class="btn_lnk" href="https://resources.oreilly.com/examples" target="_blank">head first</a>
+    </div>
 
 <footer id="htmFooter">
     <script src="js/site.js"></script>
