--- a/patternsWeb/tm_form.htm
+++ b/patternsWeb/tm_form.htm
@@ -68,6 +68,22 @@
 </fieldset></form>
 
 
+<div class="hide w3-row w3-container w3-red">
+    <form>
+        <div class="w3-col" style="width:25%" w3-margin-right>
+            <label for="txt_phoneNumber">Введите номер телефона:</label>
+        </div>
+        <div class="w3-col" style="width:45%">
+            <input type="text" id="txt_phoneNumber" name="txt_phoneNumber" placeholder=""/>
+        </div>
+    </form>
+        <div class="w3-col" style="width:30%">
+            <!-- <button id="add_phone">Отправить &rarr;</button>"/> -->
+            <input class="w3-red" id="add_phone" type="submit" value="Отправить &rarr;"/>
+        </div>
+</div>
+
+
 <!-- With javaScript -->
 
 <input type="text" id="myInput" oninput="myFunction()">
