--- a/patternsWeb/tm_htm.htm
+++ b/patternsWeb/tm_htm.htm
@@ -8,34 +8,35 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>W3.CSS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-</head>
+    <head>
+        <title>W3.CSS</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    </head>
 
 <body><!--<body onload="startTime()">-->
-<header>
-    <nav>
-
-    </nav>
-</header>
-
-<section>
     <header>
+        <nav>...</nav>
     </header>
-</section>
 
-<article>
+    <section>
+        <header>...</header>
+    </section>
 
-</article>
+    <article>...</article>
+    <aside>...</aside>
 
-<aside>
+	<nav>...</nav>
+		<article>
+			<section>
+			...
+			</section>
+		</article>
 
-</aside>
+	<aside>...</aside>
+	<footer>...</footer>    
 
-</body>
-</html>
+</body></html>
 
 <!-- HEAD -->
 <head>
