--- a/patternsWeb/tm_html5.htm
+++ b/patternsWeb/tm_html5.htm
@@ -28,3 +28,9 @@
      <div class="t_dt">8</div>
      <div class="t_dt">9</div>  
 </div>
+
+<pre>
+     Some text
+          Some text
+               Some text
+</pre>
