--- a/patternsWeb/tm_menu.htm
+++ b/patternsWeb/tm_menu.htm
@@ -6,3 +6,13 @@
         <a href="About.html">Styles</a>
     </nav>
 </header>
+
+<header>
+    <h1><abbr title="Язык гипер текстовой разметки">HTML</abbr></h1>
+    <nav>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+    </nav>
+</header>
