hm - tested markdown

--- a/prj_site-1/FIII_blog.html
+++ b/prj_site-1/FIII_blog.html
@@ -101,7 +101,21 @@
                 поточить когти о любимое кресло или подразнить глупых собак за окном? Не понимаю...
             </p>
             </article>
+
+                    <!-- GRID -->
+        <div class="grid">
+            <div class="box a">A</div>
+            <div class="box b">B</div>
+            <div class="box c">C</div>
+            <div class="box d">D</div>
+            <div class="box e">E</div>
+            <div class="box f">F</div>
+            <div class="box f">G</div>
+        </div>
         </section>
+
+
+
     
         <aside>
             <p class="headingI">
