--- a/cv-1.htm
+++ b/cv-1.htm
@@ -1,8 +1,12 @@
 
 
 
+<header>
+    <h1>Sattarov Faat</h1>
+    <hr>
+    <h5>Junior web developer</h5>
+</header>
 
-<h1>Sattarov Faat - Junior web developer</h1>
 <ul>
     <li>Country: Russia, Samara</li>
     <li>Date of birth: 11.08.1986</li>
@@ -42,131 +46,140 @@
 | [website](http://nontest.000webhostapp.com/) |
 | [rs.school](https://app.rs.school/login) |
 
-<h2> Skills </h2>
+<aside class="aside_l">
+    <h2> Skills </h2>
 
-<ul>
-    <li> HTML5 (9/10) and CSS3 (7/10) </li>
-    <li> SQL (7/10) </li>
-    <li> JavaScript (5/10) and jQuery (4/10) </li>
-    <li> PHP (4/10)</li>
-    <li> Linux (5/10) and Windows (9/10) </li>
-</ul>
+    <ul>
+        <li> HTML5 (9/10) and CSS3 (7/10) </li>
+        <li> SQL (7/10) </li>
+        <li> JavaScript (5/10) and jQuery (4/10) </li>
+        <li> PHP (4/10)</li>
+        <li> Linux (5/10) and Windows (9/10) </li>
+    </ul>
 
-<h2> Languages </h2>
+    <h2> Languages </h2>
 
-<ul>
-    <li> Russian (native) </li>
-    <li>English (IELTS: B2)</li>
-</ul>
+    <ul>
+        <li> Russian (native) </li>
+        <li>English (IELTS: B2)</li>
+    </ul>
 
-<h2> Education </h2>
+    <h2> Education </h2>
 
-| Year | University | Degree |
-| --- | --- | --- |
-| 2012 – 2015 | Volga State University of Telecommunications and Informatics | Evening department: Bachelor’s degree in Computer Science|
-| 2004 – 2009 | Samara State Polytechnical Institute | Speciality: electric power systems and networks; Qualification: electrical engineer |
+    | Year | University | Degree |
+    | --- | --- | --- |
+    | 2012 – 2015 | Volga State University of Telecommunications and Informatics | Evening department: Bachelor’s degree in Computer Science|
+    | 2004 – 2009 | Samara State Polytechnical Institute | Speciality: electric power systems and networks; Qualification: electrical engineer |
 
-<h2> Experience </h2>
+</aside>
 
-<h3> Technical IT support engineer </h3>
-| Year | Company | 
-| --- | --- |
-| Jul 2019 – Present | LLC "SSI Schaefer" (Samara Region, Russian Federation) |
-Description: 
-* first level.
+<main>
+    <h2> Experience </h2>
 
-<h3> Main technical support consultant </h3>
-| Year | Company | 
-| --- | --- |
-| Dec 2017 – Jul 2019 | LLC "SSI Schaefer" (Samara Region, Russian Federation) |
-Description:
-<ul>
-    * troubleshooting conveyor system;
-    * remote support of server:
-        * checking log-file,
-        * checking processes and etc;
-    * remote support of pcx and plc;
-    * connecting to database in some cases via sqldeveloper;
-    * helping in maintenance of conveyor system;
-    * creating tickets:
-        * solving issues of first level,
-        * translating into English and vice versa;
-    * communication with customers and with second level specialists;
-    * working with technical documentation and schemes;
-    * business trips to warehouses;
-    * additional night shifts.
-</ul> 
+    <h3> Technical IT support engineer </h3>
+    | Year | Company | 
+    | --- | --- |
+    | Jul 2019 – Present | LLC "SSI Schaefer" (Samara Region, Russian Federation) |
+    Description: 
+    * first level.
 
-<h3> Senior Technical Support Consultant </h3>
-| Year | Company | 
-| --- | --- |
-| Nov 2016 – Dec 2017 | LLC "SSI Schaefer" (Samara Region, Russian Federation) |
-Description: 
-* maintenance and technical support of automated conveyor warehouses (contact level).
+    <h3> Main technical support consultant </h3>
+    | Year | Company | 
+    | --- | --- |
+    | Dec 2017 – Jul 2019 | LLC "SSI Schaefer" (Samara Region, Russian Federation) |
+    Description:
+    <ul>
+        * troubleshooting conveyor system;
+        * remote support of server:
+            * checking log-file,
+            * checking processes and etc;
+        * remote support of pcx and plc;
+        * connecting to database in some cases via sqldeveloper;
+        * helping in maintenance of conveyor system;
+        * creating tickets:
+            * solving issues of first level,
+            * translating into English and vice versa;
+        * communication with customers and with second level specialists;
+        * working with technical documentation and schemes;
+        * business trips to warehouses;
+        * additional night shifts.
+    </ul> 
 
-<h3> Senior Customer Support Engineer </h3>
-| Year | Company | 
-| --- | --- |
-| Apr 2015 – Dec 2016 | LLC «Regional center of information security» (Samara Region, Russian Federation) |
-Description:
-<ul>
-    <li> fix CMS, because of that, it's possible to add a new sections to the site;
-    <li> technical support our clients by the phone. Solve problems, which appears during the work with software of SKB Kontur (SAAS- products);
-    <li> remote access to our clients, teaching our clients how to work with our products;
-    <li> site administration of rcib.info, add new content;
-    <li> change and repair computer hardware;
-    <li> install, sustain, and troubleshoot hardware and software on network servers and personal computers and upgrade and configure PC;
-    <li> installation and technical support of a cash machine.
-</ul>
+    <h3> Senior Technical Support Consultant </h3>
+    | Year | Company | 
+    | --- | --- |
+    | Nov 2016 – Dec 2017 | LLC "SSI Schaefer" (Samara Region, Russian Federation) |
+    Description: 
+    * maintenance and technical support of automated conveyor warehouses (contact level).
 
-<h3> Design engineer in the department of low voltage equipment design </h3>
-| Year | Company | 
-| --- | --- |
-| Aug 2011 – Jun 2012 | CJSC Electroshield Samara (Samara Region, Russian Federation) |
-Description:
-<ul>
-    <li> circuit design of elementary scheme and layout scheme;
-    <li> searching of required materials;
-    <li> development of components and products for low-voltage equipment in accordance with the requirements of GOST standards and Unified system for design documentation;
-    <li> writing specifications;
-    <li> assembly support.
-</ul>
+    <h3> Senior Customer Support Engineer </h3>
+    | Year | Company | 
+    | --- | --- |
+    | Apr 2015 – Dec 2016 | LLC «Regional center of information security» (Samara Region, Russian Federation) |
+    Description:
+    <ul>
+        <li> fix CMS, because of that, it's possible to add a new sections to the site;
+        <li> technical support our clients by the phone. Solve problems, which appears during the work with software of SKB Kontur (SAAS- products);
+        <li> remote access to our clients, teaching our clients how to work with our products;
+        <li> site administration of rcib.info, add new content;
+        <li> change and repair computer hardware;
+        <li> install, sustain, and troubleshoot hardware and software on network servers and personal computers and upgrade and configure PC;
+        <li> installation and technical support of a cash machine.
+    </ul>
 
-<h3> Design engineer in the department of high voltage equipment design </h3>
-| Nov 2010 – Aug 2011 | Company | 
-| --- | --- |
-| Jul 2019 – Present | CJSC Electroshield Samara (Samara Region, Russian Federation) |
-Description:
-<ul>
-    <li> constructed trolley for vacuum switch;
-    <li> constructed Mount Lock for the door of the electricity substation;
-    <li> searching of required materials;
-    <li> development of components and products for 35 kV substation in accordance with the requirements of GOST standards and Unified system for design documentation;
-    <li> writing specifications;
-    <li> assembly support.
-</ul>
+    <h3> Design engineer in the department of low voltage equipment design </h3>
+    | Year | Company | 
+    | --- | --- |
+    | Aug 2011 – Jun 2012 | CJSC Electroshield Samara (Samara Region, Russian Federation) |
+    Description:
+    <ul>
+        <li> circuit design of elementary scheme and layout scheme;</li>
+        <li> searching of required materials;</li>
+        <li> development of components and products for low-voltage equipment in accordance 
+            with the requirements of GOST standards and Unified system for design documentation;</li>
+        <li> writing specifications;</li>
+        <li> assembly support.</li>
+    </ul>
 
-<h3> Engineer </h3>
-| Year | Company | 
-| --- | --- |
-| Dec 2009 – Feb 2010 | OJSC "RCC "Progress"" (Samara Region, Russian Federation) |
-Description: 
-* faulty estimates;
-* reconstruction of electric system.
+    <h3> Design engineer in the department of high voltage equipment design </h3>
+    | Nov 2010 – Aug 2011 | Company | 
+    | --- | --- |
+    | Jul 2019 – Present | CJSC Electroshield Samara (Samara Region, Russian Federation) |
+    Description:
+    <ul>
+        <li> constructed trolley for vacuum switch;</li>
+        <li> constructed Mount Lock for the door of the electricity substation;</li>
+        <li> searching of required materials;</li>
+        <li> development of components and products for 35 kV substation in accordance 
+            with the requirements of GOST standards and Unified system for design documentation;</li>
+        <li> writing specifications;</li>
+        <li> assembly support.</li>
+    </ul>
 
-<h3> Apprentice Construction Electrician </h3>
-| Year | Company | 
-| --- | --- |
-| Jul 2005 – Aug 2005 | OJSC "Electroshield" (Samara Region, Russian Federation) |
-Description: 
-* installation of low voltage equipment.
+    <h3> Engineer </h3>
+    | Year | Company | 
+    | --- | --- |
+    | Dec 2009 – Feb 2010 | OJSC "RCC "Progress"" (Samara Region, Russian Federation) |
+    Description: 
+    * faulty estimates;
+    * reconstruction of electric system.
 
-<h2> Support </h2>
-<p>Tools and manuals that I use to build <em>HTML & CSS</em>:</p>
-<ul>
-    <li> https://www.codecademy.com/learn/learn-css </li>
-    <li> https://www.w3schools.com/css/css_grid.asp </li>
-    <li> [GitLab Docs](https://docs.gitlab.com/ee/user/markdown.html) </li>
-    <li> [mastering-markdown](https://guides.github.com/features/mastering-markdown/) </li>
-    <li> [markdown demo](https://markdown-it.github.io/) </li>
-</ul>
+    <h3> Apprentice Construction Electrician </h3>
+    | Year | Company | 
+    | --- | --- |
+    | Jul 2005 – Aug 2005 | OJSC "Electroshield" (Samara Region, Russian Federation) |
+    Description: 
+    * installation of low voltage equipment.
+</main>
+
+<footer>
+    <h2> Support </h2>
+    <p>Tools and manuals that I use to build <em>HTML & CSS</em>:</p>
+    <ul>
+        <li> <a href="https://www.codecademy.com/learn/learn-css"></a> </li>
+        <li> <a href="https://www.w3schools.com/css/css_grid.asp"></a> </li>
+        <li> <a href=""></a>[GitLab Docs](https://docs.gitlab.com/ee/user/markdown.html) </li>
+        <li> <a href=""></a>[mastering-markdown](https://guides.github.com/features/mastering-markdown/) </li>
+        <li> <a href=""></a>[markdown demo](https://markdown-it.github.io/) </li>
+    </ul>
+</footer>
