--- a/patternsWeb/tm_layout.htm
+++ b/patternsWeb/tm_layout.htm
@@ -145,9 +145,7 @@
             width: 50px;
             height: 50px;
         }
-    </style>
-
-</head><body>
+    </style></head><body>
 
     <h1>Grid Layouts</h1>
 
@@ -233,7 +231,5 @@
     <li><a href="#about">About</a></li>
 </ul>
 
-    <script>
-        document.getElementById("demo").innerHTML = "Hello JavaScript!";
-    </script>
-</body></html>
+<script>
+</script></body></html>
