--- a/tst.htm
+++ b/tst.htm
@@ -18,7 +18,13 @@
 			  <li><a href="links.htm">Links</a></li>
 			  <li><a href="about.htm">About</a></li>
 		  </ul>
-	  </nav>
+    </nav>
+    
+    <h2>Code examples</h2>
+    <h4> Example of PHP code: auto inserting of images to html. </h4>
+    <h4>HTML example: form for contact</h4>
+    <h4>Javascript example: include part of html (header and footer)</h4>
+    <h4>Javascript example: email address parsing</h4>
 
 <footer id="footer">
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
