--- a/prj_lnk/code_lnk.htm
+++ b/prj_lnk/code_lnk.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head></head><body id="lnkOwn">
+<!DOCTYPE html><html lang="en"><head></head><body id="lnk-code">
 
 <section class="grid content_lnk color_bg_white_glass">
    <article>
@@ -14,7 +14,7 @@
       <h2>RS-school</h2>
       <a class="btn_lnk_1" href="https://docs.google.com/spreadsheets/d/1oM2O8DtjC0HodB3j7hcIResaWBw8P18tXkOl1ymelvE/edit#gid=584044392" target="_blank">Schedule</a>
       <a class="btn_lnk_1" href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/markups/level%201/theyalow/theyalow-en.md" target="_blank">HW layout</a>
-      <a class="btn_lnk_1" href="" target="_blank"></a>
+      <a class="btn_lnk_1" href="https://docs.rs.school/#/README" target="_blank">docs.rs.school</a>
       <a class="btn_lnk_1" href="" target="_blank"></a>
       <a class="btn_lnk_1" href="" target="_blank"></a>
    </article>
@@ -96,8 +96,13 @@
    <article>
       <h2>web: work with PSD</h2>
          <a class="btn_lnk_1" href="https://www.photopea.com/" target="_blank">photopea</a>
-         <a class="btn_lnk_1" href="" target="_blank"></a>
-         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="https://psdetch.com/" target="_blank">psdetch</a>
+         <a class="btn_lnk_1" href="https://psdtoweb.de/" target="_blank">psdtoweb</a>
+         <a class="btn_lnk_1" href="https://www.xhtmlchop.com/tutorial.html" target="_blank">psd to html</a>
+         <a class="btn_lnk_1" href="https://www.000webhost.com/blog/psd-to-html" target="_blank">psd to html</a>
+         <a class="btn_lnk_1" href="https://www.meero.com/en/news/photography/57/The-Best-Free-Photoshop-Alternatives-For-2019" 
+               target="_blank">The Best Free Photoshop Alternatives</a>
+         <a class="btn_lnk_1" href="https://alternativeto.net/software/photopea/" target="_blank">Photoshop Alternatives</a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
    </article>
