--- a/prj_the-yalow/index.html
+++ b/prj_the-yalow/index.html
@@ -1,11 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
+   <head>
+      <meta charset="utf-8">
+      <title> theYalow </title>
+         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+         <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+         <link rel='stylesheet' href='https://www.w3schools.com/w3css/4/w3.css'>
+         <link rel='stylesheet' href='css/main.css'/>
+      </head><body>
 
-
-<header>
-    <nav class="main_nav"></nav>
-</header>
-
+   <header>
+      <img class="logo" />
+      <h1 class="logo">theYalow</h1>
+      <nav class="main_nav">
+         <ul>
+            <li>About Us</li>
+            <li>Services</li>
+            <li>Contact</li>
+         </ul>
+      </nav>
+      <h2 class="motto">The cool The minimal</h2>
+   </header>
+            
 <main></main>
-
+            
 <footer></footer>
 
 </body></html>
