--- a/prj_the-yalow/index.html
+++ b/prj_the-yalow/index.html
@@ -10,7 +10,9 @@
       </head><body>
 
    <header>
-      <img class="logo" />
+         <img class="logo" src="assets/svg/Shape 8 copy 3.svg" alt="star" height="79" width="79"> 
+         <img class="logo" src="assets/svg/Shape 8 copy 4.svg" alt="star" height="79" width="79"> 
+      
       <h1 class="logo">theYalow</h1>
       <nav class="main_nav">
          <ul>
@@ -19,6 +21,11 @@
             <li>Contact</li>
          </ul>
       </nav>
+      <video width="320" height="240" controls>
+         <source src="movie.mp4" type="video/mp4">
+         <source src="movie.ogg" type="video/ogg">
+      Your browser does not support the video tag.
+      </video> 
       <h2 class="motto">The cool The minimal</h2>
    </header>
             
