--- a/prj_the-yalow/index.html
+++ b/prj_the-yalow/index.html
@@ -10,9 +10,9 @@
       </head><body>
 
    <header>
-         <img class="logo" src="assets/svg/Shape 8 copy 3.svg" alt="star" height="79" width="79"> 
-         <img class="logo" src="assets/svg/Shape 8 copy 4.svg" alt="star" height="79" width="79"> 
-      
+         <!-- <img class="logo" src="assets/svg/Shape 8 copy 3.svg" alt="star" height="79" width="79"> 
+         <img class="logo" src="assets/svg/Shape 8 copy 4.svg" alt="star" height="79" width="79"> -->
+            <div class="logo_svg"></div>
       <h1 class="logo">theYalow</h1>
       <nav class="main_nav">
          <ul>
