--- a/prj_lnk/code_lnk.htm
+++ b/prj_lnk/code_lnk.htm
@@ -63,7 +63,7 @@
          <a class="btn_lnk_1" href="hf-mv.com" target="_blank">head first mobile web</a>
          <a class="btn_lnk_1" href="https://resources.oreilly.com/examples/9780596101978/tree/master" target="_blank">head first</a>
          <a class="btn_lnk_1" href="https://resources.oreilly.com/examples" target="_blank">head first</a>
-      <3>to do</3>
+      <h3>to do</h3>
          <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
@@ -75,6 +75,12 @@
          <a class="btn_lnk_1" href="https://learngitbranching.js.org/" target="_blank">learn git branching</a>
          <a class="btn_lnk_1" href="http://learn.javascript.ru/screencast/git" target="_blank">screencast: git</a>
          <a class="btn_lnk_1" href="https://git-scm.com/book/en/v2" target="_blank">git book</a>
+         <a class="btn_lnk_1" href="https://git-scm.com/book/en/v2/Getting-Started-First-Time-Git-Setup" target="_blank">git setup</a>
+         <a class="btn_lnk_1" href="https://git-scm.com/book/en/v2/Appendix-C%3A-Git-Commands-Setup-and-Config#_core_editor" 
+            target="_blank">git config</a>
+         <a class="btn_lnk_1" href="https://git-scm.com/book/en/v2/Git-Basics-Getting-a-Git-Repository" target="_blank">getting repository</a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
       <h3>Git tools</h3>
