--- a/prj_lnk/code_lnk.htm
+++ b/prj_lnk/code_lnk.htm
@@ -9,6 +9,14 @@
       <a class="btn_lnk_1" href="" target="_blank"></a>
       <a class="btn_lnk_1" href="" target="_blank"></a>
    </article>
+   <article>
+      <h2>manager tools</h2>
+         <a class="btn_lnk_1" href="https://www.hubspot.com/" target="_blank">hubspot</a>
+         <a class="btn_lnk_1" href="https://www.hubspot.com/products/service" target="_blank">customer service</a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
+   </article>
 
    <article>
       <h2>RS-school</h2>
@@ -42,11 +50,22 @@
          <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
    </article>
-
+   <article>
+      <h2>web site hosting</h2>
+      <a class="btn_lnk_1" href="https://pages.github.com/" target="_blank">pages.github</a>
+      <a class="btn_lnk_1" href="" target="_blank"></a>
+      <a class="btn_lnk_1" href="" target="_blank"></a>
+      <a class="btn_lnk_1" href="" target="_blank"></a>
+      <a class="btn_lnk_1" href="" target="_blank"></a>
+      <a class="btn_lnk_1" href="" target="_blank"></a>
+   </article>
    <article>
    <h2>code web</h2>
       <a class="btn_lnk_1" href="https://www.w3schools.com/" target="_blank">w3schools</a>
       <a class="btn_lnk_1" href="https://www.w3schools.com/howto/default.asp" target="_blank">w3schools.com: how to</a>
+      <a class="btn_lnk_1" href="https://www.htmldog.com/" target="_blank">htmldog</a>
+      <a class="btn_lnk_1" href="https://developer.mozilla.org/ru/" target="_blank">mdn</a>
+      <a class="btn_lnk_1" href="" target="_blank"></a>
       <a class="btn_lnk_1" href="" target="_blank"></a>
       <a class="btn_lnk_1" href="" target="_blank"></a>
       <a class="btn_lnk_1" href="" target="_blank"></a>
@@ -69,6 +88,7 @@
          <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
    </article>
+   
 
    <article>
       <h2>code git</h2>
@@ -86,7 +106,7 @@
       <h3>Git tools</h3>
          <a class="btn_lnk_1" href="https://desktop.github.com/" target="_blank">desktop.github</a>
          <a class="btn_lnk_1" href="https://www.gitkraken.com/" target="_blank">gitkraken</a>
-         <a class="btn_lnk_1" href="https://pages.github.com/" target="_blank">pages.github</a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
    </article>
 
@@ -143,7 +163,7 @@
          <a class="btn_lnk_1" href="" target="_blank"></a>
       <h3>jQuery</h3>
          <a class="btn_lnk_1" href="https://jquery.com/" target="_blank">jquery</a>
-         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="https://www.htmldog.com/guides/javascript/intermediate/jquery/" target="_blank">html dog jq</a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
@@ -163,7 +183,7 @@
    <article>
       <h2>code web PHP</h2>
       <a class="btn_lnk_1" href="https://secure.php.net/manual/en/" target="_blank">php doc</a>
-      <a class="btn_lnk_1" href="" target="_blank"></a>
+      <a class="btn_lnk_1" href="https://www.php.net/manual/en/install.php" target="_blank">php install</a>
       <a class="btn_lnk_1" href="" target="_blank"></a>
       <a class="btn_lnk_1" href="" target="_blank"></a>
       <a class="btn_lnk_1" href="" target="_blank"></a>
