--- a/prj_lnk/lnk.htm
+++ b/prj_lnk/lnk.htm
@@ -16,5 +16,5 @@
     </div>
 
 <footer id="htmFooter">
-    <script src="js/site.js"></script>
+    <script src="js/scr.js"></script>
 </footer></body></html>
