--- a/prj_lnk/code_lnk.htm
+++ b/prj_lnk/code_lnk.htm
@@ -2,14 +2,14 @@
 
 
 
-<section class="content color_bg_white_glass">
+<section class="content color_bg-white-glass_10 shadow-white">
    <div class="tab">
       <button class="tab-lnks" onclick="open_it(event,'code-lnks')">Code</button>
       <button class="tab-lnks" onclick="open_it(event,'support-lnks')">Support</button>
    </div>
 
    <div class="tab-content grid" id="code-lnks">
-      <article>
+      <article class="">
          <h2>name</h2>
          <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
@@ -17,7 +17,7 @@
          <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
       </article>
-      <article>
+      <article class="">
          <h2>manager tools</h2>
             <a class="btn_lnk_1" href="https://www.hubspot.com/" target="_blank">hubspot</a>
             <a class="btn_lnk_1" href="https://www.hubspot.com/products/service" target="_blank">customer service</a>
@@ -26,7 +26,7 @@
             <a class="btn_lnk_1" href="" target="_blank"></a>
       </article>
 
-      <article>
+      <article class="">
          <h2>RS-school</h2>
          <a class="btn_lnk_1" href="https://docs.google.com/spreadsheets/d/1oM2O8DtjC0HodB3j7hcIResaWBw8P18tXkOl1ymelvE/edit#gid=584044392" target="_blank">Schedule</a>
          <a class="btn_lnk_1" href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/markups/level%201/theyalow/theyalow-en.md" target="_blank">HW layout</a>
