--- a/prj_lnk/code_lnk.htm
+++ b/prj_lnk/code_lnk.htm
@@ -15,6 +15,9 @@
       <a class="btn_lnk_1" href="https://docs.google.com/spreadsheets/d/1oM2O8DtjC0HodB3j7hcIResaWBw8P18tXkOl1ymelvE/edit#gid=584044392" target="_blank">Schedule</a>
       <a class="btn_lnk_1" href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/markups/level%201/theyalow/theyalow-en.md" target="_blank">HW layout</a>
       <a class="btn_lnk_1" href="https://docs.rs.school/#/README" target="_blank">docs.rs.school</a>
+      <a class="btn_lnk_1" href="https://github.com/rolling-scopes-school/docs" target="_blank">git of RsSchool</a>
+      <a class="btn_lnk_1" href="https://app.rs.school/login" target="_blank">login</a>
+      <a class="btn_lnk_1" href="" target="_blank"></a>
       <a class="btn_lnk_1" href="" target="_blank"></a>
       <a class="btn_lnk_1" href="" target="_blank"></a>
    </article>
@@ -59,11 +62,11 @@
    </article>
 
    <article>
-      <h2>Code examples web</h2>
+      <h2>Code web examples</h2>
          <a class="btn_lnk_1" href="hf-mv.com" target="_blank">head first mobile web</a>
          <a class="btn_lnk_1" href="https://resources.oreilly.com/examples/9780596101978/tree/master" target="_blank">head first</a>
          <a class="btn_lnk_1" href="https://resources.oreilly.com/examples" target="_blank">head first</a>
-      <3>to do</3>
+      <h3>to do</h3>
          <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
