--- a/prj_lnk/it_lnk.htm
+++ b/prj_lnk/it_lnk.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head></head><body id="lnk-it">
 
-<section class="content color_bg-white-glass_10 shadow">
+<section class="content color_bg-dark_red-glass-10 shadow">
    <div class="tab">
       <button class="tab-lnks" onclick="part_it(event,'code-lnks')">Code</button>
       <button class="tab-lnks" onclick="part_it(event,'support-lnks')">Support</button>
@@ -122,7 +122,8 @@
                <a class="btn_lnk_1" href="https://html-css-js.com/css/generator/box-shadow/" target="_blank">box-shadow</a>
                <a class="btn_lnk_1" href="https://developer.mozilla.org/ru/docs/Web/CSS/CSS_Box_Model/Box-shadow_generator" 
                      target="_blank">shadow generator</a>
-               <a class="btn_lnk_1" href="" target="_blank"></a>
+               <a class="btn_lnk_1" href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors" 
+                     target="_blank">CSS Selectors</a>
                <a class="btn_lnk_1" href="" target="_blank"></a>
             <h3>css man</h3>
                <a class="btn_lnk_1" href="" target="_blank"></a>
