--- a/prj_lnk/it_lnk.htm
+++ b/prj_lnk/it_lnk.htm
@@ -1,9 +1,13 @@
 <!DOCTYPE html><html lang="en"><head></head><body id="lnk-it">
 
+
+<span class="menu-icon" onclick="openNav()">&#9776; open</span>
+
 <section class="content color_bg-dark_red-glass-10 shadow">
    <div class="tab">
       <button class="tab-lnks" onclick="part_it(event,'code-lnks')">Code</button>
       <button class="tab-lnks" onclick="part_it(event,'support-lnks')">Support</button>
+      <button class="tab-lnks" onclick="part_it(event,'search-lnks')">Search</button>
       <button class="tab-lnks" onclick="part_it(event,'other-lnks')">Other</button>
       <button class="tab-lnks" onclick="part_it(event,'sft-lnks')">Soft</button>
    </div>
@@ -317,14 +321,33 @@
             </details>
       </article>
    </div>
-  <!-- Other --> 
+<!-- Search -->
+   <div class="tab-content grid" id="search-lnks">
+      <article class="btn-after">
+         <h2>Search</h2>
+         <a class="btn_lnk_1" href="https://duckduckgo.com/?q=&t=ffsb" target="_blank">duckduckgo</a>
+         <a class="btn_lnk_1" href="https://ahmia.fi/" target="_blank">ahmia</a>
+         <a class="btn_lnk_1" href="https://www.google.com/" target="_blank">google</a>
+         <a class="btn_lnk_1" href="https://yandex.ru/" target="_blank">yandex</a>
+         <a class="btn_lnk_1" href="https://vk.com/docs" target="_blank">vk documents</a>
+         <a class="btn_lnk_1" href="https://web.archive.org/" target="_blank">Wayback Machine</a>
+         <a class="btn_lnk_1" href="https://www.yahoo.com/" target="_blank">yahoo</a>
+      </article>
+
+      <article class="btn-after">
+         <h2>Img search</h2>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+      </article>
+
+<!-- Other --> 
    <div class="tab-content grid" id="other-lnks">
       <article class="btn-after">
          <h2>RS-school</h2>
          <a class="btn_lnk_1" href="https://docs.google.com/spreadsheets/d/1oM2O8DtjC0HodB3j7hcIResaWBw8P18tXkOl1ymelvE/edit#gid=584044392" target="_blank">Schedule</a>
          <a class="btn_lnk_1" href="https://github.com/rolling-scopes-school/tasks/blob/master/tasks/markups/level%201/theyalow/theyalow-en.md" target="_blank">HW layout</a>
          <a class="btn_lnk_1" href="https://docs.rs.school/#/README" target="_blank">docs.rs.school</a>
-         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="https://www.training.ru/#!/Home" target="_blank">Epam: training center</a>
          <a class="btn_lnk_1" href="" target="_blank"></a>
       </article>
    </div>
