--- a/prj_lnk/it_lnk.htm
+++ b/prj_lnk/it_lnk.htm
@@ -8,6 +8,7 @@
       <button class="tab-lnks" onclick="part_it(event,'code-lnks')">Code</button>
       <button class="tab-lnks" onclick="part_it(event,'support-lnks')">Support</button>
       <button class="tab-lnks" onclick="part_it(event,'search-lnks')">Search</button>
+      <button class="tab-lnks" onclick="part_it(event,'english-lnks')">English</button>
       <button class="tab-lnks" onclick="part_it(event,'other-lnks')">Other</button>
       <button class="tab-lnks" onclick="part_it(event,'sft-lnks')">Soft</button>
    </div>
@@ -128,6 +129,11 @@
                      target="_blank">shadow generator</a>
                <a class="btn_lnk_1" href="https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors" 
                      target="_blank">CSS Selectors</a>
+               <a class="btn_lnk_1" href="https://css3gen.com/text-shadow/" target="_blank">text-shadow</a>
+               <a class="btn_lnk_1" href="" target="_blank"></a>
+               <a class="btn_lnk_1" href="" target="_blank"></a>
+               <a class="btn_lnk_1" href="" target="_blank"></a>
+               <a class="btn_lnk_1" href="" target="_blank"></a>
                <a class="btn_lnk_1" href="" target="_blank"></a>
             <h3>css man</h3>
                <a class="btn_lnk_1" href="" target="_blank"></a>
@@ -339,7 +345,22 @@
             <a class="btn_lnk_1" href="" target="_blank"></a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
       </article>
-
+   </div>
+<!-- English -->
+   <div class="tab-content grid" id="english-lnks">
+      <article class="btn-after">
+         <h2>eng translate</h2>
+         <a class="btn_lnk_1" href="https://translate.google.com/" target="_blank">Google Translate</a>
+         <a class="btn_lnk_1" href="https://dopeoplesay.com/" target="_blank">do people say it</a>
+         <a class="btn_lnk_1" href="https://context.reverso.net/" target="_blank">reverso</a>
+         <a class="btn_lnk_1" href="http://www.reverso.net/text_translation.aspx?lang=EN" target="_blank">reverso EN</a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
+      </article>
+   </div>
 <!-- Other --> 
    <div class="tab-content grid" id="other-lnks">
       <article class="btn-after">
