--- a/prj_lnk/it_lnk.htm
+++ b/prj_lnk/it_lnk.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="en"><head></head><body id="lnk-it">
+<!DOCTYPE html><html lang="en"><head></head><body id="lnk-it" class="public">
 
 
 <span class="menu-icon" onclick="openNav()">&#9776; open</span>
@@ -62,14 +62,17 @@
             <a class="btn_lnk_1" href="https://www.htmldog.com/" target="_blank">htmldog</a>
             <a class="btn_lnk_1" href="https://developer.mozilla.org/ru/" target="_blank">mdn</a>
             <a class="btn_lnk_1" href="https://www.guru99.com/" target="_blank">guru99</a>
-            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="https://github.com/nodejs" target="_blank">nodejs</a>
+            <a class="btn_lnk_1" href="https://www.npmjs.com/" target="_blank">npmjs</a>
+            <a class="btn_lnk_1" href="https://reactjs.org/" target="_blank">reactjs</a>
+            <a class="btn_lnk_1" href="https://facebook.github.io/react-native/" target="_blank">react-native</a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
          <h3>Server</h3>
             <a class="btn_lnk_1" href="http://cherokee-project.com/doc/" target="_blank">cherokee doc</a>
             <a class="btn_lnk_1" href="http://cherokee-project.com/doc/cookbook_ror.html" target="_blank">cherokee cookbook</a>
-            <a class="btn_lnk_1" href="" target="_blank"></a>
-            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="https://github.com/shelleyp/LearningNode2" target="_blank">LearningNode2</a>
+            <a class="btn_lnk_1" href="https://nodejs.org/en/" target="_blank">nodejs-site</a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
          <h3>Web hosting</h3>
             <a class="btn_lnk_1" href="https://www.000webhost.com/" target="_blank">000webhost</a>
@@ -338,6 +341,11 @@
          <a class="btn_lnk_1" href="https://vk.com/docs" target="_blank">vk documents</a>
          <a class="btn_lnk_1" href="https://web.archive.org/" target="_blank">Wayback Machine</a>
          <a class="btn_lnk_1" href="https://www.yahoo.com/" target="_blank">yahoo</a>
+         <a class="btn_lnk_1" href="https://www.wolframalpha.com/" target="_blank">wolframalpha</a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
+         <a class="btn_lnk_1" href="" target="_blank"></a>
       </article>
 
       <article class="btn-after">
