--- a/prj_site-2/FII.html
+++ b/prj_site-2/FII.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
 <title>Кошка Масяня</title>
     </head>
     
