--- a/prj_lnk/lnk-it.htm
+++ b/prj_lnk/lnk-it.htm
@@ -1,7 +1,25 @@
 <!DOCTYPE html><html lang="en"><head></head><body id="lnk-it" class="public">
 
+<div w3-include-html="inc/nav-main.html"></div>
 
 <span class="menu-icon" onclick="openNav()">&#9776; open</span>
+<!-- The overlay -->
+  <div id="nav-overlay" class="menu-overlay">
+     <!-- Button to close the overlay navigation -->
+     <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
+  
+     <!-- Overlay content -->
+     <div class="menu-overlay-content">
+        <a href="lnk-dark.htm">darklnk</a>
+        <a href="lnk-it.htm">itlnk</a>
+        <a href="lnk-own.htm">ownlnk</a>
+        <a href="lnk-wrk.htm">wrklnk</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
+     </div>
+  </div>
 
 <section class="content color_bg-dark_red-glass-10 shadow">
    <div class="tab">
@@ -73,10 +91,16 @@
             <a class="btn_lnk_1" href="http://cherokee-project.com/doc/cookbook_ror.html" target="_blank">cherokee cookbook</a>
             <a class="btn_lnk_1" href="https://github.com/shelleyp/LearningNode2" target="_blank">LearningNode2</a>
             <a class="btn_lnk_1" href="https://nodejs.org/en/" target="_blank">nodejs-site</a>
+            <a class="btn_lnk_1" href="https://github.com/nodejs/node-v0.x-archive/wiki/Node-Hosting" target="_blank">Node-Hosting</a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
          <h3>Web hosting</h3>
             <a class="btn_lnk_1" href="https://www.000webhost.com/" target="_blank">000webhost</a>
             <a class="btn_lnk_1" href="https://pages.github.com/" target="_blank">pages.github</a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
       </article>
@@ -84,7 +108,6 @@
       <article class="btn-after">
          <h2>Code examples web</h2>
             <a class="btn_lnk_1" href="hf-mv.com" target="_blank">head first mobile web</a>
-            <a class="btn_lnk_1" href="https://resources.oreilly.com/examples/9780596101978/tree/master" target="_blank">head first</a>
             <a class="btn_lnk_1" href="https://resources.oreilly.com/examples" target="_blank">head first</a>
             <a class="btn_lnk_1" href="https://codepen.io/" target="_blank">codepen</a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
@@ -296,11 +319,12 @@
       <article class="btn-after">
          <h2>IT windows</h2>
             <a class="btn_lnk_1" href="https://docs.microsoft.com/en-us/powershell/" target="_blank">powershell doc</a>
-            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="https://support.bluestacks.com/hc/en-us/sections/360001186931-Frequently-Asked-Questions" target="_blank">faq</a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
             <a class="btn_lnk_1" href="" target="_blank"></a>
       </article>
+      
       <article class="btn-after">
          <h2>Support</h2>
             <details>
@@ -382,7 +406,30 @@
    </div>
 <!-- Soft -->
    <div class="tab-content grid" id="sft-lnks">
-      
+      <article class="btn-after">
+         <h2>bootable USB</h2>
+            <a class="btn_lnk_1" href="https://rufus.ie/" target="_blank">rufus</a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+      </article>
+      <article class="btn-after">
+         <h2>os</h2>
+            <a class="btn_lnk_1" href="https://system76.com/" target="_blank">system76</a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+      </article>
+      <article class="btn-after">
+         <h2>cleaner</h2>
+            <a class="btn_lnk_1" href="https://www.bleachbit.org/" target="_blank">bleachbit</a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+            <a class="btn_lnk_1" href="" target="_blank"></a>
+      </article>
    </div>
 </section>
 
